--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ ins {
     text-decoration: none;
 }
 
+.wrapper {
+    overflow: hidden;
+}
+
 ::-webkit-input-placeholder {
     font-family: "OpenSans-Regular";
     font-size: 14px;
@@ -110,7 +114,7 @@ body {
 
 .main_slider {
     margin-top: 128px;
-    /* position: relative; ----------------------------------*/
+    margin-bottom: 65px;
 }
 
 .main_slider ul {
@@ -129,8 +133,13 @@ body {
     transition: 1s;
 }
 
+.main_slider img {
+    transform: scale(0);
+}
+
 .main_slider ul li.active {
     opacity: 1;
+    z-index: 1;
 }
 
 .main_slider_text {
@@ -145,17 +154,20 @@ body {
     font-size: 125px;
     color: #fff;
     text-transform: uppercase;
+    transform: translateX(100%);
 }
 
 .main_slider_desc {
     font-size: 18.75px;
     color: #fff;
+    transform: translateX(-100%);
 }
 
 .main_slider_price {
     font-size: 18.75px;
     color: #fff;
     margin-top: 20px;
+    transform: translateX(-100%);
 }
 
 .main_slider_btn {
@@ -170,6 +182,32 @@ body {
     padding: 12px 18px 14px 0;
     width: 149px;
     position: relative;
+    transform: translateY(1000px);
+}
+
+.main_slider ul li.active .main_slider_title {
+    transform: translateX(0);
+    transition: 1s;
+}
+
+.main_slider ul li.active .main_slider_desc {
+    transform: translateX(0);
+    transition: 1s;
+}
+
+.main_slider ul li.active .main_slider_price {
+    transform: translateX(0);
+    transition: 1s;
+}
+
+.main_slider ul li.active .main_slider_btn {
+    transform: translateX(0);
+    transition: 1s;
+}
+
+.main_slider ul li.active img {
+    transform: scale(1);
+    transition: 1s;
 }
 
 .main_slider_btn i {
@@ -183,11 +221,22 @@ body {
     box-shadow: 0 0 0 5px rgba(245, 198, 23, 0.3);
 }
 
+.main_slider_btn:hover {
+    color: #f5c617;
+    border-color: #f5c617;
+}
+
+.main_slider_btn:hover i {
+    box-shadow: 0 0 0 10px rgba(245, 198, 23, 0.3);
+    transition: 0.3s;
+}
+
 .main_slider_controls {
     position: absolute;
     right: 0;
     bottom: 0;
     width: 104px;
+    z-index: 2;
 }
 
 .main_slider_controls_count {
@@ -214,6 +263,7 @@ body {
     border-radius: 50%;
     background: #252525;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .main_slider_controls_pags span.active {
@@ -257,4 +307,66 @@ body {
     height: 1px;
     background: #252525;
     transform: rotate(-45deg);
+}
+
+.h2 {
+    font-size: 41.67px;
+    text-transform: uppercase;
+}
+
+.h2 span {
+    color: #f4c515;
+}
+
+.h2::before {
+    content: "";
+    display: inline-block;
+    width: 56px;
+    height: 2px;
+    vertical-align: top;
+    margin: 30px 12px 0 0;
+    background-color: #f4c515;
+}
+
+.sale_block {
+    margin-top: 49px;
+}
+
+.sale_block_left {
+    width: 560px;
+}
+
+.sale_block_left img {
+    position: relative;
+    left: -128px;
+}
+
+.counter_sale {
+    text-align: center;
+    margin-top: 101px;
+}
+
+.counter_sale_title {
+    font-size: 16.52px;
+    line-height: 43.46px;
+    text-transform: uppercase;
+}
+
+.counter_sale_title span {
+    color: #2f3333;
+    margin: 0 14px;
+}
+
+.counter_sale_title p {
+    display: inline;
+    color: #cfcfcf;
+}
+
+.counter_sale_title p ins {
+    color: #f4c515;
+}
+
+.counter_sale_desc {
+    font-size: 14.58px;
+    color: #7b7b7b;
 }
