--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,9 @@ body {
 }
 
 .sale_block_left {
-    width: 560px;
+    width: 556px;
+    float: left;
+    z-index: 1;
 }
 
 .sale_block_left img {
@@ -403,7 +405,7 @@ Countdown begin ################################################################
 }
 
 .soon[data-layout*="line"] {
-    padding: 28px 0;
+    padding: 28px 0 6px;
 }
 
 .soon .soon-group {
@@ -421,3 +423,116 @@ Countdown begin ################################################################
 /* 
 Countdown end #################################################################
 */
+
+/* 
+Social begin #################################################################
+*/
+
+.soc {
+    text-align: center;
+}
+
+.soc a {
+    display: inline-block;
+    vertical-align: top;
+    width: 36px;
+    height: 36px;
+    margin: 0 5px 7px;
+    background-color: #2f5391;
+    border-radius: 50%;
+    position: relative;
+    transition: 0.3s;
+}
+
+.soc a img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.soc a:hover {
+    background-color: #f4c515;
+    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.23);
+}
+
+/* 
+Social end #################################################################
+*/
+
+.sale {
+    padding-bottom: 85px;
+}
+
+.sale_block_right {
+    /* overflow: hidden; */
+}
+
+.sale_block_right ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.sale_block_right ul li {
+    width: 50%;
+    border: 1px solid #f1f1f1;
+    padding: 25px 25px 0;
+}
+
+.sale_block_right ul li:hover {
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.19);
+    cursor: pointer;
+}
+
+.sale_block_right_category {
+    font-size: 14.58px;
+    color: #3d65b1;
+}
+
+.sale_block_right_title {
+    font-size: 16.67px;
+    margin-top: 6px;
+    /* color: #2f3333; */
+}
+
+.sale_block_right_price {
+    font-size: 16.67px;
+    text-transform: uppercase;
+    margin-top: 12px;
+    /* color: #2f3333; */
+}
+
+.sale_block_right_price span {
+    color: #f4c515;
+}
+
+.sale_block_right_img {
+    margin-top: 19px;
+}
+
+.sale_block_right .soc {
+    margin-top: 23px;
+}
+
+.sale_block_right .soc a {
+    transform: scale(0);
+    transition: 0s;
+}
+
+.sale_block_right ul li:hover .soc a:nth-child(1) {
+    transform: scale(1);
+    transition: 0.2s;
+}
+
+.sale_block_right ul li:hover .soc a:nth-child(2) {
+    transform: scale(1);
+    transition: 0.2s 0.1s;
+}
+
+.sale_block_right ul li:hover .soc a:nth-child(3) {
+    transform: scale(1);
+    transition: 0.2s 0.2s;
+}
