--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,7 @@ Social end #################################################################
 .popular {
     background-color: #f5f5f5;
     padding-top: 93px;
+    padding-bottom: 136px;
 }
 
 .popular_tab_btns {
@@ -567,19 +568,68 @@ Social end #################################################################
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    position: absolute;
+    left: -10000px;
+}
+
+.popular_all_tabs_block ul.active {
+    position: relative;
+    left: 0;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(1) {
+    opacity: 1;
+    transition: .2s .1s opacity, .4s box-shadow;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(2) {
+    opacity: 1;
+    transition: .2s .2s opacity, .4s box-shadow;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(3) {
+    opacity: 1;
+    transition: .2s .3s opacity, .4s box-shadow;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(4) {
+    opacity: 1;
+    transition: .2s .7s opacity, .4s box-shadow;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(5) {
+    opacity: 1;
+    transition: .2s .6s opacity, .4s box-shadow;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(6) {
+    opacity: 1;
+    transition: .2s .5s opacity, .4s box-shadow;
+}
+
+.popular_all_tabs_block ul.active li:nth-child(7) {
+    opacity: 1;
+    transition: .2s .4s opacity, .4s box-shadow;
 }
 
 .popular_all_tabs_block ul li {
     width: 25%;
     background-color: #fff;
     border: 1px solid #f1f1f1;
-    padding: 25px 25px 0;
+    padding: 25px 25px 30px;
     cursor: pointer;
     transition: .4s;
+    position: relative;
+    opacity: 0;
 }
 
 .popular_all_tabs_block ul li:first-child {
     width: 50%;
+}
+
+.popular_all_tabs_block ul li:hover {
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.19);
+    z-index: 1;
 }
 
 .popular_main_goods_left {
@@ -690,6 +740,26 @@ Social end #################################################################
 .popular_main_goods_right .soc {
     text-align-last: left;
     margin-top: 80px;
+}
+
+.popular_goods_img {
+    /* padding: 26px 0 42px; */
+    height: 270px;
+}
+
+.popular_goods_img img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.popular_goods_desc {
+    font-size: 14.58px;
+    line-height: 22.92px;
+    color: #7b7b7b;
 }
 
 
