--- a/css/style.css
+++ b/css/style.css
@@ -1154,3 +1154,129 @@ Social end #################################################################
 .multi_text .soc a {
     transform: scale(0);
 }
+
+.popup {
+    width: 560px;
+    height: 300px;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    z-index: 102;
+    display: none;
+}
+
+.popup_title {
+    font-size: 22.92px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    background: #252525;
+    padding: 12px 0;
+}
+
+.popup_content {
+    height: 245px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.popup_category {
+    font-size: 14.58px;
+    color: #1a65b8;
+}
+
+.popup_goods_title {
+    font-size: 16.67px;
+    line-height: 22.92px;
+    color: #2b3132;
+    margin-top: 4px;
+}
+
+.popup_text .price {
+    font-size: 16.67px;
+    color: #6f6f6f;
+    text-transform: uppercase;
+    margin-top: 23px;
+}
+
+.popup_text .price span {
+    color: #f4c515;
+}
+
+.popup form {
+    margin-top: 24px;
+}
+
+.popup form input[type="text"] {
+    width: 150px;
+    height: 50px;
+    border: 2px solid #000;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 14.58px;
+    color: #828282;
+}
+
+.popup form button[type="submit"] {
+    font-size: 14.58px;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    background: #252525;
+    border: 2px solid #252525;
+    border-radius: 50px;
+    padding: 12px 18px 14px 0;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.popup form button[type="submit"] i {
+    position: absolute;
+    right: -26px;
+    bottom: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: url("../img/cart.png") no-repeat center #f5c617;
+    box-shadow: 0 0 0 5px rgba(245, 198, 23, 0.3);
+}
+
+.popup form button[type="submit"]:hover {
+    color: #f5c617;
+    border-color: #f5c617;
+    background: transparent;
+}
+
+.popup form button[type="submit"]:hover i {
+    box-shadow: 0 0 0 10px rgba(245, 198, 23, 0.3);
+    transition: 0.3s;
+}
+
+.close {
+    width: 22px;
+    height: 22px;
+    background: url("../img/close.png");
+    position: absolute;
+    top: 15px;
+    right: 22px;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.bg_popup {
+    background: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 101;
+    display: none;
+}
